# mergelog

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.in
man/: Makefile.am  Makefile.in  mergelog.1  zmergelog.1
src/: Makefile.am  Makefile.in  mergelog.c
